fix align issue

--- a/components/Leaderboard/leaderboard.module.scss
+++ b/components/Leaderboard/leaderboard.module.scss
@@ -21,15 +21,6 @@
             font-weight: bolder;
             margin: 8px 0;
         }
-        > div {
-            overflow: auto;
-            @media screen and (max-width: 600px) {
-                > & {
-                    width: 95vw;
-                    position: relative;
-                }
-            }
-        }
         .stars {
             text-align: center;
             display: flex;
@@ -57,4 +48,12 @@
 .incompleteStars {
     color: transparent;
     user-select: none;
+}
+
+@media screen and (max-width: 600px) {
+    .scrollTable {
+        overflow: auto;
+        width: 95vw;
+        position: relative;
+    }
 }
